src/test/resources/purescript_examples/passing/2609.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n')
      PsiElement(import)('import')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Eg')
      PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSASTWrapperElement(PositionedDeclarationRef)
        PsiElement(proper name)('Foo')
      PsiErrorElement:Expecting proper name, (, , or )
        PsiElement(error)(''')
        PsiElement(()('(')
        PsiElement(proper name)('Bar')
        PsiElement(error)(''')
        PsiElement())(')')
        PsiElement(,)(',')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement(operator)(':->')
        PsiElement())(')')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PsiElement(proper name)('Eff')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PsiElement(proper name)('CONSOLE')
        PsiElement(,)(',')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(TypeDeclaration)
        PsiElement(identifier)('bar'')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Type)
          PSASTWrapperElement(TypeAtom)
            PSASTWrapperElement(TypeConstructor)
              PSASTWrapperElement(Qualified)
                PsiElement(proper name)('Foo')
  PsiErrorElement:Unexpected error. Expecting Module
    PsiElement(error)(''')
    PsiElement(whitespace)('\n')
    PsiElement(identifier)('bar'')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(natural)('4')
    PsiElement(whitespace)(' ')
    PsiElement(operator)(':->')
    PsiElement(whitespace)(' ')
    PsiElement(natural)('5')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(forall)('forall')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('e')
    PsiElement(.)('.')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Eff')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(identifier)('console')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('CONSOLE')
    PsiElement(whitespace)(' ')
    PsiElement(|)('|')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('e')
    PsiElement())(')')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Unit')
    PsiElement(whitespace)('\n')
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(case)('case')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('bar'')
    PsiElement(whitespace)(' ')
    PsiElement(of)('of')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Bar')
    PsiElement(error)(''')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('l')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('r')
    PsiElement(whitespace)(' ')
    PsiElement(->)('->')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('log')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement(whitespace)('\n')
